Correct Canada FIP display on mobile

--- a/catalogue_app/static/style.css
+++ b/catalogue_app/static/style.css
@@ -51,6 +51,9 @@ a {
 	/* Same as height of body's margin-bottom */
 	height: 60px;
 }
+.footer .goc-fip {
+	display: inline;
+}
 /***** End footer *****/
 
 
